--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ img {
   max-width: 100%;
 }
 
-.slide-wrapper{
+.slide-wrapper {
   overflow: hidden;
 }
 
@@ -28,3 +28,6 @@ img {
   margin: 0 20px;
 }
 
+.slide {
+  transform: translate3d(-1265.5px, 0, 0);
+}
