--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 body {
-  margin: 0;
+  margin: 0px;
 }
 
 ul {
-  margin: 0px;
   padding: 0px;
+  margin: 0px;
   list-style: none;
 }
 
@@ -30,9 +30,10 @@ img {
   width: 80vw;
   max-width: 800px;
   margin: 0 20px;
+
   border-radius: 4px;
   overflow: hidden;
-  box-shadow: 0 2px 4px rgba(0, 0, 0.4);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
   opacity: 0.8;
   transform: scale(0.8);
   transition: 0.4s;
@@ -53,14 +54,59 @@ img {
   display: block;
   width: 12px;
   height: 12px;
-  margin: 5px;
   background: #fb5;
   border-radius: 50%;
   overflow: hidden;
   text-indent: -999px;
+  margin: 5px;
 }
 
 [data-control="slide"] li.active a,
 [data-control="slide"] li a:hover {
   background: #e54;
+}
+
+.custom-controls {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+
+.custom-controls li {
+  opacity: 0.8;
+  transform: scale(0.8);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 2px;
+  box-shadow: 0, 2px, 2px rgba(0, 0, 0, 0.5);
+  transition: 0.3s;
+}
+
+.custom-controls li.active {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.arrow-nav {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px 0;
+}
+
+.arrow-nav button {
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  color: #ffffff;
+  height: 40px;
+  width: 40px;
+  background: #fb5 url(../img/arrow.svg) center center no-repeat;
+}
+
+.arrow-nav button.prev {
+  transform: rotate(-180deg);
 }
